fix cards overflowing the page. remove library log section for now.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
 /* Meyers reset - start */
 
 html,
@@ -143,27 +138,29 @@ table {
   --primary-color: #fffbfb;
   --btn-bg-color: #333;
   --btn-bg-hover: rgb(85, 83, 83);
+  --border-radius: 5px;
+  --shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 /***************************
 ------------Main Page----------
 *****************************/
+body {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+}
+
 .main-container {
   display: flex;
   flex-direction: column;
-  padding: 1.5rem 0;
-  /* flex: 1; */
-  font-family: "Roboto", sans-serif;
-  width: 90%;
   margin-left: auto;
   margin-right: auto;
-  /* text-align: center; */
   background-color: var(--bg-color);
 }
 
-svg {
+/* svg {
   width: 3rem;
-}
+} */
 
 /***************************
 ------------Header----------
@@ -174,19 +171,21 @@ svg {
 .header {
   display: flex;
   justify-content: space-between;
-  /* max-height: 150px; */
+  height: 100px;
   padding: 10px;
   background-color: var(--primary-color);
+  box-shadow: var(--shadow);
 }
 
 .page-title-wrapper {
   display: flex;
   justify-content: center;
-  align-items: top;
+  margin-left: 20px;
 }
 
 .page-title-wrapper > div {
   padding: 0 5px;
+  display: flex;
 }
 
 .page-title-wrapper > div > h2 {
@@ -196,26 +195,8 @@ svg {
   font-size: 3rem;
 }
 
-/* header: library */
-
-.library-log {
-  border: 2px black solid;
-  padding: 1.1rem 0.7rem;
-  border-radius: 0.4rem;
-  width: 200px;
-}
-
-.library-log > h2 {
-  text-align: center;
-  font-size: 1.4rem;
-  padding-bottom: 0.8rem;
-}
-
-.library-log-details > div {
-  display: flex;
-  justify-content: space-between;
-  padding-bottom: 0.3rem;
-  font-size: 1.1rem;
+.page-title-wrapper > div > h2 > span > svg {
+  width: 3rem;
 }
 
 /***************************
@@ -239,7 +220,7 @@ main {
   background-color: var(--btn-bg-color);
   color: white;
   border: none;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   cursor: pointer;
 }
 
@@ -252,8 +233,8 @@ main {
 form {
   /* To hide the form */
   display: none;
-  width: 500px;
-  margin: 50px auto;
+  width: 400px;
+  margin: 30px auto;
   text-align: center;
   padding: 20px;
   border: 1px solid #ddd;
@@ -269,7 +250,7 @@ select {
   font-size: 16px;
   margin-top: 8px;
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
   outline: none;
   transition: 0.3s;
@@ -297,7 +278,7 @@ input[type="submit"] {
   background-color: var(--btn-bg-color);
   color: #fff;
   border: none;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   cursor: pointer;
 }
 
@@ -307,10 +288,11 @@ input[type="submit"]:hover {
 
 /* library cards */
 #library {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  align-content: end;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 40px;
+  margin: 40px 20px 40px 20px;
+  /* background-color: var(--primary-color); */
 }
 
 .book-card {
@@ -324,6 +306,9 @@ input[type="submit"]:hover {
   border: 1px solid #ccc;
   border-radius: 10px;
   text-align: center;
+  justify-self: center;
+  align-self: center;
+  background-color: var(--primary-color);
 }
 
 .book-title {
@@ -349,7 +334,7 @@ input[type="submit"]:hover {
 button {
   padding: 10px 20px;
   border: 2px solid white;
-  border-radius: 5px;
+  border-radius: var(--border-radius);
   font-size: 16px;
   font-weight: bold;
   background-color: var(--btn-bg-color);
@@ -363,7 +348,10 @@ button:hover {
 }
 
 .read-status {
-  background-color: rgb(145, 145, 226);
+  /* background-color: rgb(145, 145, 226); */
+  background-color: #ff9c9c;
   padding: 3px;
   font-size: 16px;
+  font-weight: bold;
+  border-radius: var(--border-radius);
 }
